# Finern

./: StatTemplate20180105a.rar
BlueWay-Shangliao/: BlueWay-Shangliao.sln
BlueWay-Shangliao/BlueWay-Shangliao/: BlueWay-Shangliao.csproj
BlueWay-Shangliao/BlueWay-Shangliao/Properties/: Resources.resx
MySoftWareFrame/: MySoftWareFrame.sln
MySoftWareFrame/BLL/: BLL.csproj  LoginManager.cs
MySoftWareFrame/BLL/Properties/: AssemblyInfo.cs
MySoftWareFrame/DAL/: DAL.csproj  MysqlHelper.cs  UserDB.cs
MySoftWareFrame/DAL/Properties/: AssemblyInfo.cs
MySoftWareFrame/Model/: Model.csproj  UserInfo.cs
MySoftWareFrame/Model/Properties/: AssemblyInfo.cs
MySoftWareFrame/MySoftWareFrame/: Form1.Designer.cs  Form1.cs  MySoftWareFrame.csproj  Program.cs
MySoftWareFrame/MySoftWareFrame/Properties/: AssemblyInfo.cs  (+2 more)
QtFrameDesignModel/: CMakeLists.txt  Config.h  build.bat
QtFrameDesignModel/Resources/: QtFrameDesignModel.qrc  QtFrameDesignModel.rc
QtFrameDesignModel/Src/: QtFrameDesignModel.cpp  QtFrameDesignModel.h  QtFrameDesignModel.ui  main.cpp
ServerTest/: ServerTest.sln
ServerTest/ClientTest/: ClientTest.csproj  Form1.Designer.cs  Form1.cs
ServerTest/ServerTest/: Form1.Designer.cs  Form1.cs  ServerTest.csproj
SolingScrew/: SolingScrew.sln
SolingScrew/Setup/: Setup.isl  Setup.isproj
SolingScrew/SolingScrew/: SolingScrew.csproj
StatTemplate20180105a/: StatTemplate.sln
StatTemplate20180105a/StatTemplate/: FrmLogin.Designer.cs  FrmLogin.cs  FrmLogin.resx  FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  Program.cs  RunStatus.cs  StatTemplate.csproj  TableStruct.cs  ucConfiguration.Designer.cs  ucConfiguration.cs  ucEqCheck.Designer.cs  ucEqCheck.cs  ucEqOperation.Designer.cs  ucEqOperation.cs  ucHelp.Designer.cs  ucHelp.cs  ucMaintenanceBook.Designer.cs  ucMaintenanceBook.cs  ucMonitor.Designer.cs  ucMonitor.cs  ucMonitor.resx  ucSOP.Designer.cs  ucSOP.cs
blueway/.svn/: wc.db
blueway/BlueWay-Shangliao/: BlueWay-Shangliao.csproj  LoginDlg.Designer.cs  Program.cs
(+62 files in other folders)
